welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(weekday) {
		return false
	}
	else if(weekday == true && vacation == true)  {
		return true
	}
}
